syntax = "proto3";

package chatroom.msgpb;

message QuitGroupAck {
    bool success = 1;
    string errmsg = 2;
}